CHANGES IN VERSION 0.99.11
------------------------
 o revised groupOTU that output index can be used in geom_text and update vignette <2015-02-04, Wed>

CHANGES IN VERSION 0.99.10
------------------------
 o support y scale by category variable <2015-02-03, Tue>
 o support order nodes by yscale <2015-02-03, Tue>

CHANGES IN VERSION 0.99.9
------------------------
 o update vignette <2015-02-02, Mon>
 
CHANGES IN VERSION 0.99.8
------------------------
 o add get.phylopic function to read the online phylo pic and convert it to grob object,
   which can be use to annotate ggplot figure using annotation_custom <2015-01-30, Fri>
 
CHANGES IN VERSION 0.99.7
------------------------
 o add angle information for 'fan' & 'unrooted' layout <2015-01-29, Thu>

CHANGES IN VERSION 0.99.6
------------------------
 o read.beast now supports support values of sets such as {x, y, z} <2015-01-19, Mon>
 o now read.beast supports characters in support values <2015-01-18, Sun>
 o add example of gzoom and groupOTU in vignette <2015-01-14, Wed> 
 o implement groupOTU methods <2015-01-14, Wed>
 o export get.offspring.tip <2015-01-14, Wed>

CHANGES IN VERSION 0.99.5
------------------------
 o move ape and ggplot2 from Depends to Imports <2015-01-12, Mon>
 o get.tipseq method for paml_rst and codeml object <2015-01-08, Thu>
 o add gzoom function, similar to zoom function in ape <2015-01-07, Wed>
 o add examples in man pages of %<% and %<+% operators <2015-01-06, Tue>
 o remove <<- and update vignette <2015-01-06, Tue>
 o update vignette and use BibTex and CSL for references <2015-01-05, Mon>  
 o update cladogram layout <2015-01-05, Mon>
 o read.baseml function and update vignette with baseml example <2015-01-04, Sun>
 o plot method for hyphy and hyphy example in vignette <2015-01-04, Sun>
 o merge all vignettes to ggtree vignette <2015-01-04, Sun>

CHANGES IN VERSION 0.99.4
------------------------
 o ggtree now support branch.length = "none" to only draw tree topology <2015-01-03, Sat> 