@@ -44,6 +44,7 @@ export(read.jplace)
 export(read.paml_rst)
 export(read.tree)
 export(rtree)
+export(scale_color)
 export(theme_tree)
 export(theme_tree2)
 export(write.jplace)
@@ -62,6 +63,7 @@ exportMethods(get.treeinfo)
 exportMethods(get.treetext)
 exportMethods(groupOTU)
 exportMethods(plot)
+exportMethods(scale_color)
 exportMethods(show)
 importFrom(Biostrings,GENETIC_CODE)
 importFrom(Biostrings,readBStringSet)
