@@ -89,6 +89,14 @@ setMethod("groupOTU", signature(object="beast"),
           }
           )
 
+##' @rdname scale_color-methods
+##' @exportMethod scale_color
+setMethod("scale_color", signature(object="beast"),
+          function(object, by, ...) {
+              scale_color_(object, by, ...)
+          })
+
+
 ##' get.tree method
 ##'
 ##'
