@@ -31,6 +31,13 @@ setMethod("groupOTU", signature(object="codeml_mlc"),
           }
           )
 
+##' @rdname scale_color-methods
+##' @exportMethod scale_color
+setMethod("scale_color", signature(object="codeml_mlc"),
+          function(object, by, ...) {
+              scale_color_(object, by, ...)
+          })
+
 ##' @rdname show-methods
 ##' @exportMethod show
 setMethod("show", signature(object = "codeml_mlc"),
