@@ -1,0 +1,45 @@
+% Generated by roxygen2 (4.1.0): do not edit by hand
+% Please edit documentation in R/AllGenerics.R, R/beast.R, R/codeml.R, R/codeml_mlc.R, R/hyphy.R, R/jplace.R, R/paml_rst.R, R/tree.R
+\docType{methods}
+\name{scale_color}
+\alias{scale_color}
+\alias{scale_color,beast-method}
+\alias{scale_color,codeml-method}
+\alias{scale_color,codeml_mlc-method}
+\alias{scale_color,hyphy-method}
+\alias{scale_color,jplace-method}
+\alias{scale_color,paml_rst-method}
+\alias{scale_color,phylo-method}
+\title{scale_color method}
+\usage{
+scale_color(object, by, ...)
+
+\S4method{scale_color}{beast}(object, by, ...)
+
+\S4method{scale_color}{codeml}(object, by, ...)
+
+\S4method{scale_color}{codeml_mlc}(object, by, ...)
+
+\S4method{scale_color}{hyphy}(object, by, ...)
+
+\S4method{scale_color}{jplace}(object, by, ...)
+
+\S4method{scale_color}{paml_rst}(object, by, ...)
+
+\S4method{scale_color}{phylo}(object, by, ...)
+}
+\arguments{
+\item{object}{supported objects, including phylo, paml_rst,
+codeml_mlc, codeml, jplace, beast, hyphy}
+
+\item{by}{one of numerical attributes}
+
+\item{...}{additional parameter}
+}
+\value{
+color vector
+}
+\description{
+scale_color method
+}
+
